【增】增补并兼容 Java 8